--- a/src/app/auth/components/register.component.html
+++ b/src/app/auth/components/register.component.html
@@ -8,24 +8,31 @@
           <a [routerLink]="['/login']">Have an account?</a>
         </p>
 
+        <app-backend-errors *ngIf="backendErrors$ | async" [errors]="(backendErrors$ | async)!"></app-backend-errors>
+
         <form [formGroup]="form" (ngSubmit)="onFormSubmit()">
           <fieldset>
             <fieldset class="form-group">
               <label for="username" class="sr-only">Username</label>
-              <input id="username" type="text" class="form-control form-control-lg" placeholder="Username" formControlName="username">
+              <input id="username" type="text" class="form-control form-control-lg" placeholder="Username"
+                     formControlName="username">
             </fieldset>
 
             <fieldset class="form-group">
               <label for="email" class="sr-only">Email</label>
-              <input id="email" type="email" class="form-control form-control-lg" placeholder="Email" formControlName="email">
+              <input id="email" type="email" class="form-control form-control-lg" placeholder="Email"
+                     formControlName="email">
             </fieldset>
 
             <fieldset class="form-group">
               <label for="password" class="sr-only">Password</label>
-              <input id="password" type="password" class="form-control form-control-lg" placeholder="Password" formControlName="password">
+              <input id="password" type="password" class="form-control form-control-lg" placeholder="Password"
+                     formControlName="password">
             </fieldset>
 
-            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">Sign Up</button>
+            <button class="btn btn-lg btn-primary pull-xs-right" type="submit" [disabled]="isSubmitting$ | async">Sign
+              Up
+            </button>
           </fieldset>
         </form>
       </div>
