--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="isLoading$ | async">Loading...</div>
+<app-loading *ngIf="isLoading$ | async"></app-loading>
 
-<div *ngIf="error$ | async">Something went wrong</div>
+<app-error-message *ngIf="error$ | async"></app-error-message>
 
 <div *ngIf="feed$ | async">
   <div class="article-preview" *ngFor="let article of (feed$ | async)?.articles">
