Implement popular tags, set types for generic Store

--- a/src/app/global-feed/components/global-feed/global-feed.component.html
+++ b/src/app/global-feed/components/global-feed/global-feed.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="col-md-3">
-        POPULAR TAGS
+        <app-popular-tags></app-popular-tags>
       </div>
     </div>
   </div>
