--- a/src/app/tag-feed/components/tag-feed/tag-feed.component.html
+++ b/src/app/tag-feed/components/tag-feed/tag-feed.component.html
@@ -4,7 +4,7 @@
   <div class="container page">
     <div class="row">
       <div class="col-md-9">
-        <app-feed-toggle></app-feed-toggle>
+        <app-feed-toggle [tagName]="tagName"></app-feed-toggle>
         <app-feed [apiUrl]="apiUrl"></app-feed>
       </div>
 
