--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <span *ngIf="isAuthor$ | async" class="btn-group">
-          <a [routerLink]="['/articles', article.slug, '/edit']" class="btn btn-outline-secondary btn-sm">
+          <a [routerLink]="['/articles', article.slug, 'edit']" class="btn btn-outline-secondary btn-sm">
             <i class="ion-edit"></i>
             Edit Article
           </a>
