--- a/src/app/edit-article/components/edit-article/edit-article.component.html
+++ b/src/app/edit-article/components/edit-article/edit-article.component.html
@@ -1,4 +1,4 @@
 <app-loading *ngIf="isLoading$ | async"></app-loading>
 
-<app-article-form *ngIf="initialValues" [initialValues]="initialValues" [isSubmitting]="(isSubmitting$ | async)!"
+<app-article-form *ngIf="initialValues$ | async" [initialValues]="(initialValues$ | async)!" [isSubmitting]="(isSubmitting$ | async)!"
                   (articleSubmitEvent)="onSubmit($event)" [errors]="errors$ | async"></app-article-form>
