Implement settings page

--- a/src/app/settings/components/settings/settings.component.html
+++ b/src/app/settings/components/settings/settings.component.html
@@ -1,1 +1,49 @@
-<p>settings works!</p>
+<div class="settings-page" *ngIf="user">
+  <div class="container page">
+    <div class="row">
+      <div class="col-md-6 offset-md-3 col-12">
+        <h1 class="text-center">Settings</h1>
+
+        <app-backend-errors *ngIf="backendErrors$ | async" [errors]="(backendErrors$ | async)!"></app-backend-errors>
+
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+          <fieldset>
+            <fieldset>
+              <fieldset class="form-group">
+                <input type="text" class="form-control form-control-lg" formControlName="image"
+                  placeholder="Profole's picture URL">
+              </fieldset>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <input type="text" class="form-control form-control-lg" formControlName="username"
+                placeholder="User Name">
+            </fieldset>
+
+            <fieldset class="form-group">
+              <textarea class="form-control form-control-lg" formControlName="bio"
+                placeholder="A couple of words about you"></textarea>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <input type="password" class="form-control form-control-lg" formControlName="password"
+                placeholder="New password">
+            </fieldset>
+
+            <fieldset class="form-group">
+              <input type="text" class="form-control form-control-lg" formControlName="username"
+                placeholder="Profole's picture URL">
+            </fieldset>
+
+            <button type="submit" class="btn btn-lg btn-primary pull-xs-right"
+              [disabled]="form.invalid || (isSubmitting$ | async)">Update Settings</button>
+          </fieldset>
+        </form>
+
+        <hr>
+
+        <button type="button" class="btn btn-outline-danger" (click)="logout()">...or click here to log out</button>
+      </div>
+    </div>
+  </div>
+</div>
