--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -15,7 +15,8 @@
       </div>
 
       <div class="pull-xs-right">
-        ADD TO FAVOURITES
+        <app-add-to-favorite [isFavorite]="article.favorited" [articleSlug]="article.slug"
+          [favoritesCount]="article.favoritesCount"></app-add-to-favorite>
       </div>
     </div>
 
@@ -27,6 +28,6 @@
     </a>
   </div>
 
-  <app-pagination [total]="(feed$ | async)?.articlesCount" [limit]="limit" [url]="baseUrl"
-                  [currentPage]="currentPage"></app-pagination>
+  <app-pagination [total]="(feed$ | async)?.articlesCount" [limit]="limit" [url]="baseUrl" [currentPage]="currentPage">
+  </app-pagination>
 </div>
