--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,1 +1,42 @@
-<p>profile works!</p>
+<div class="profile-page" *ngIf="profile">
+  <div class="user-info">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-10 offset-md-1">
+          <img [src]="profile.image" [alt]="profile.username" class="user-image">
+          <h4>{{ profile.username }}</h4>
+          <p>{{ profile.bio }}</p>
+          <div>
+            PROFILE FOLLOW BUTTON
+            <a class="btn btn-sm btn-outline-secondary action-btn" routerLink="/settings">
+              <i class="ion-gear-a"></i>
+              Edit Profile Settings
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-10 offset-md-1">
+        <div class="articles-toggle">
+          <ul class="nav nav-pills outline-active">
+            <li class="nav-item">
+              <a [routerLink]="['/profiles', profile.username]" [routerLinkActiveOptions]="{ exact: true }"
+                routerLinkActive="active " class="nav-link">My Posts</a>
+            </li>
+
+            <li class="nav-item">
+              <a [routerLink]="['/profiles', profile.username, 'favorite']" [routerLinkActiveOptions]="{ exact: true }"
+                routerLinkActive="active " class="nav-link">Favorite Posts</a>
+            </li>
+          </ul>
+        </div>
+
+        <app-feed [apiUrl]="apiUrl"></app-feed>
+      </div>
+    </div>
+  </div>
+</div>
